--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.fromthesky.healthyshares">
 
     <application
@@ -10,10 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthyShares">
         <activity
-            android:label="Anxiety"
-            android:parentActivityName=".MainActivity"
             android:name=".Anxiety"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Anxiety"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".Anger"
             android:exported="false"
