--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthyShares">
         <activity
+            android:parentActivityName=".MainActivity"
             android:name=".SettingsActivity"
             android:exported="true">
             <intent-filter>
